# koe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md
.github/scripts/: package-app.sh  update-feeds.py
.github/workflows/: release.yml
.pi/remote-pi/: config.json
KoeApp/: project-lite.yml  project-x86.yml  project.yml
KoeApp/Koe/: Info.plist
KoeApp/Koe.xcodeproj/: project.pbxproj
KoeApp/Koe/AppDelegate/: SPAppDelegate.h  SPAppDelegate.m  SPAppDelegateLogicTests.m
KoeApp/Koe/Audio/: SPAudioCaptureManager.h  SPAudioCaptureManager.m  SPAudioDeviceManager.h  SPAudioDeviceManager.m  SPSystemAudioCaptureManager.h  SPSystemAudioCaptureManager.m
KoeApp/Koe/Bridge/: SPRustBridge.h  SPRustBridge.m
KoeApp/Koe/Clipboard/: SPClipboardManager.h  SPClipboardManager.m  SPClipboardRestorePolicy.h  SPClipboardRestorePolicy.m  SPClipboardRestorePolicyTests.m
KoeApp/Koe/Feedback/: SPCuePlayer.h  SPCuePlayer.m
KoeApp/Koe/History/: SPHistoryManager.h  SPHistoryManager.m  SPHistoryManagerTests.m
KoeApp/Koe/Hotkey/: SPHotkeyMonitor.h  SPHotkeyMonitor.m
KoeApp/Koe/Overlay/: SPOverlayPanel.h  SPOverlayPanel.m
KoeApp/Koe/Paste/: SPInstantPasteGuard.h  SPInstantPasteGuard.m  SPPasteManager.h  SPPasteManager.m
KoeApp/Koe/Permissions/: SPPermissionManager.h  SPPermissionManager.m
KoeApp/Koe/SetupWizard/: SPSetupWizardWindowController.h  SPSetupWizardWindowController.m
KoeApp/Koe/StatusBar/: SPStatusBarManager.h  SPStatusBarManager.m
KoeApp/Koe/Update/: SPUpdateManager.m
KoeApp/Koe/VirtualMic/: SPVirtualMicInstaller.h  SPVirtualMicInstaller.m
KoeApp/Koe/en.lproj/: Localizable.strings
KoeApp/Koe/zh-Hans.lproj/: Localizable.strings
KoeApp/VirtualMicPlugin/Resources/: Info.plist
KoeApp/VirtualMicPlugin/Sources/: koe_virtual_mic_driver.h  koe_virtual_mic_driver.mm  koe_virtual_mic_render_source.h  koe_virtual_mic_render_source.mm  (+2 more)
docs/: appcast-mlx.xml  appcast.xml  bluetooth-audio-latency.md  local-asr-design.md  release-signing.md  update-feed.json
koe-asr/: Cargo.toml  README.md
koe-asr/src/: apple_speech.rs  config.rs  doubao.rs  doubaoime.rs  event.rs  glm.rs  lib.rs  mimo.rs  mlx.rs  provider.rs  qwen.rs  sherpa_onnx.rs  transcript.rs  whisper.rs
koe-asr/tests/: api_test.rs  transcript_test.rs
koe-cli/: Cargo.toml
koe-cli/src/: benchmark.rs  dict.rs  main.rs  text.rs
koe-core/: Cargo.toml  build.rs  cbindgen.toml
koe-core/examples/: render_prompts.rs
koe-core/src/: asr_factory.rs  config.rs  default_system_prompt.txt  default_translation_system_prompt.txt  default_translation_user_prompt.txt  ffi.rs  lib.rs  model_manager.rs  models.rs  prompt.rs  session.rs  telemetry.rs
koe-core/src/llm/: mod.rs  openai_compatible.rs
koe-core/src/manifests/kitten/: kitten-tts-micro-0.8.json  kitten-tts-mini-0.8.json  kitten-tts-nano-0.8-fp32.json  kitten-tts-nano-0.8-int8.json
koe-core/src/manifests/kokoro/: kokoro-en.json
koe-core/src/manifests/mlx/: Qwen3-ASR-0.6B-4bit.json  Qwen3-ASR-1.7B-4bit.json
koe-core/src/manifests/mt-local/: opus-mt-en-zh-int8.json  opus-mt-en-zh.json  opus-mt-zh-en-int8.json  opus-mt-zh-en.json
koe-core/src/manifests/sherpa-onnx/: bilingual-zh-en.json  en-20M.json  multilingual-8lang.json  zh-14M.json  zh-xlarge.json
koe-core/src/manifests/supertonic/: supertonic-2.json
koe-core/src/manifests/whisper/: base.json  small.json  turbo.json
koe-core/src/translation/: config.rs  engine.rs  gemini_live.rs  kitten.rs  local_mt.rs  mod.rs  mt.rs  output_bridge.rs  tts.rs  vad.rs
scripts/: package-dmg.sh  setup-codesign-identity.sh
tools/llmbatch/: .gitignore  Package.resolved  Package.swift  README.md
(+10 files in other folders)
