[package]
name = "koe-asr"
description = "Streaming ASR (Automatic Speech Recognition) library with multiple provider backends (Doubao, Qwen, Apple Speech, MLX Whisper, Sherpa-ONNX)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
audiopus.workspace = true
base64.workspace = true
flate2.workspace = true
futures-util.workspace = true
log.workspace = true
md-5.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
rustls = { workspace = true, default-features = false, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sherpa-onnx = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
mlx = []
apple-speech = []
sherpa-onnx = ["dep:sherpa-onnx"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
