[package]
name = "koe-core"
description = "Core library for Koe speech recognition"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "koe_core"
crate-type = ["staticlib", "lib"]

[features]
default = ["mlx", "apple-speech", "sherpa-onnx"]
mlx = ["koe-asr/mlx"]
apple-speech = ["koe-asr/apple-speech"]
sherpa-onnx = ["koe-asr/sherpa-onnx", "dep:sherpa-onnx"]

[dependencies]
async-trait.workspace = true
koe-asr = { path = "../koe-asr" }
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "http2", "stream", "system-proxy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sherpa-onnx = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
hex = "0.4"
memmap2 = "0.9"
urlencoding.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]

[build-dependencies]
cbindgen.workspace = true
